Fix padding spacing between sections

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ button {
 }
 
 .padding {
-    padding: 46px 0;
+    padding: 80px 0;
 }
 
 .quote {
